--- a/src/content/docs/rtb/Documentazione interna/Verbali interni/23-12-04.mdx
+++ b/src/content/docs/rtb/Documentazione interna/Verbali interni/23-12-04.mdx
@@ -3,9 +3,8 @@ title: Verbale 04/12/23
 description: "Meeting di Context Switch relativo al PoC"
 lastUpdated: 2024-01-07
 date: 2023-12-04
-authors [    "Nardo Silvio",  ]
-reviewers
-missingMembers [    "Banzato Alessio",    "Gardin Giovanni",    "Zaccone Rosario",    "Todesco Mattia"  ]
+authors: [    "Nardo Silvio",  ]
+missingMembers: [    "Banzato Alessio",    "Gardin Giovanni",    "Zaccone Rosario",    "Todesco Mattia"  ]
 timeStart: "15:00"
 timeEnd: "16:00"
 ---
