--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Documentazione
-description: Sito ufficiale della documentazione prodotta da Error_418 (gruppo 7) nell'ambito del corso di Ingegneria del Software (Università degli Studi di Padova, A.A. 2023/2024).
+subTitle: Sito ufficiale della documentazione prodotta da Error_418 (gruppo 7) nell'ambito del corso di Ingegneria del Software (Università degli Studi di Padova, A.A. 2023/2024).
 template: splash
 hero:
   tagline: Sito ufficiale della documentazione prodotta da Error_418 (gruppo 7) nell'ambito del corso di Ingegneria del Software (Università degli Studi di Padova, A.A. 2023/2024).
