--- a/src/content/docs/introduzione/sezioni.mdx
+++ b/src/content/docs/introduzione/sezioni.mdx
@@ -1,6 +1,6 @@
 ---
 title: Sezioni
-description: Suddivisione del sito web.
+subTitle: Suddivisione del sito web.
 next: false
 ---
 
@@ -9,12 +9,12 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 <CardGrid>
 	<LinkCard
 		title="RTB"
-		description="Requirements and Technology Baseline"
+		subTitle="Requirements and Technology Baseline"
 		href="/rtb/introduzione/"
 		/>
 	<LinkCard
 		title="PB"
-		description="Product Baseline"
+		subTitle="Product Baseline"
 		href="/pb/introduzione/"
 		/>
 </CardGrid>
