--- a/src/content/docs/rtb/Documentazione interna/Verbali interni/23-12-04.mdx
+++ b/src/content/docs/rtb/Documentazione interna/Verbali interni/23-12-04.mdx
@@ -1,6 +1,6 @@
 ---
 title: Verbale 04/12/23
-description: "Meeting di Context Switch relativo al PoC"
+subTitle: "Meeting di Context Switch relativo al PoC"
 lastUpdated: 2024-01-07
 date: 2023-12-04
 authors: [    "Nardo Silvio",  ]
