Adeguato passagio dei parametri al componente

--- a/src/content/docs/rtb/Documentazione interna/Verbali interni/23-12-04.mdx
+++ b/src/content/docs/rtb/Documentazione interna/Verbali interni/23-12-04.mdx
@@ -14,7 +14,7 @@ import ChangelogTable from '/src/components/ChangelogTable.astro';
 
 <DocumentDetails {...frontmatter}/>
 
-<ChangelogTable>
+<ChangelogTable  {...frontmatter}>
 | Versione | Data       | PR  | Titolo                                       | Redattore       | Verificatore     |
 | -------- | ---------- | --- | -------------------------------------------- | --------------- | ---------------- |
 | 1.0.0    | 07-01-2024 | 162 | DOC-314 Revisionare verbale interno 23-12-04 | Zaccone Rosario | Carraro Riccardo |
