--- a/src/content/docs/rtb/Documentazione interna/Verbali interni/23-11-23.mdx
+++ b/src/content/docs/rtb/Documentazione interna/Verbali interni/23-11-23.mdx
@@ -13,7 +13,7 @@ import ChangelogTable from '/src/components/ChangelogTable.astro';
 
 <DocumentDetails {...frontmatter}/>
 
-<ChangelogTable>
+<ChangelogTable {...frontmatter}>
 | Versione | Data           | PR  | Titolo                                       | Redattore       | Verificatore     |
 | -------- | -------------- | --- | -------------------------------------------- | --------------- | ---------------- |
 | 1.0.0    | 08-01-2024     | 159 | DOC-312 Revisionare verbale interno 23-11-23 | Zaccone Rosario | Carraro Riccardo |
