--- a/src/content/docs/rtb/Documentazione interna/Verbali interni/23-11-23.mdx
+++ b/src/content/docs/rtb/Documentazione interna/Verbali interni/23-11-23.mdx
@@ -3,7 +3,9 @@ title: Verbale 23/11/23
 subTitle: "Sommario"
 lastUpdated: 2024-01-08
 date: 2023-11-23
-authors: [    "Zaccone Rosario",  ]
+authors: [
+    "Zaccone Rosario",
+]
 timeStart: "14:45"
 timeEnd: "15:15"
 ---
