--- a/src/content/docs/rtb/Documentazione interna/Verbali interni/23-12-04.mdx
+++ b/src/content/docs/rtb/Documentazione interna/Verbali interni/23-12-04.mdx
@@ -3,8 +3,15 @@ title: Verbale 04/12/23
 subTitle: "Meeting di Context Switch relativo al PoC"
 lastUpdated: 2024-01-07
 date: 2023-12-04
-authors: [    "Nardo Silvio",  ]
-missingMembers: [    "Banzato Alessio",    "Gardin Giovanni",    "Zaccone Rosario",    "Todesco Mattia"  ]
+authors: [
+    "Nardo Silvio",
+]
+missingMembers: [
+    "Banzato Alessio",
+    "Gardin Giovanni",
+    "Zaccone Rosario",
+    "Todesco Mattia"
+]
 timeStart: "15:00"
 timeEnd: "16:00"
 ---
