Ampliata pagina di introduzione

--- a/src/content/docs/introduzione/sezioni.mdx
+++ b/src/content/docs/introduzione/sezioni.mdx
@@ -6,6 +6,8 @@ next: false
 
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
+La documentazione è suddivisa per milestone. A ciascuna milestone è associata una sezione del sito.
+
 <CardGrid>
 	<LinkCard
 		title="RTB"
@@ -18,3 +20,9 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 		href="/pb/introduzione/"
 		/>
 </CardGrid>
+
+## Navigazione e ricerca
+
+I documenti appaiono nella sidebar.
+
+È inoltre possibile individuare i documenti tramite la funzione di ricerca.
