Menzionate risorse esterne

--- a/src/content/docs/introduzione/sezioni.mdx
+++ b/src/content/docs/introduzione/sezioni.mdx
@@ -1,6 +1,9 @@
 ---
 title: Sezioni
 subTitle: Suddivisione del sito web.
+sidebar:
+  order: 1
+prev: false
 next: false
 ---
 
@@ -10,13 +13,34 @@ La documentazione è suddivisa per milestone. A ciascuna milestone è associata 
 
 <CardGrid>
 	<LinkCard
-		title="RTB"
+		title="Documenti RTB"
 		subTitle="Requirements and Technology Baseline"
 		href="/rtb/introduzione/"
 		/>
 </CardGrid>
 
-## Navigazione e ricerca
+### Risorse esterne
+
+Il presente sito web espone tutta la documentazione prodotta dal gruppo.
+
+A corredo della documentazione, sono fornite le seguenti risorse esterne, richiamabili in ogni momento tramite le icone dell'header.
+
+<CardGrid>
+	<LinkCard
+		title="Repository GitHub"
+		subTitle="Requirements and Technology Baseline"
+		href="https://github.com/Error-418-SWE/Documenti/tree/main"
+		target="_blank"
+		/>
+	<LinkCard
+		title="Dashboard Grafana"
+		subTitle="Requirements and Technology Baseline"
+		href="https://error418swe.grafana.net/public-dashboards/9392efccc5a5427c850fc9ec81df7dff"
+		target="_blank"
+		/>
+</CardGrid>
+
+### Navigazione e ricerca
 
 I documenti appaiono nella sidebar.
 
