Correzione campo partecipanti esterni

--- a/src/content/docs/rtb/Documentazione esterna/Verbali esterni/23-11-23.mdx
+++ b/src/content/docs/rtb/Documentazione esterna/Verbali esterni/23-11-23.mdx
@@ -7,9 +7,8 @@ timeStart: "14:00"
 timeEnd: "14:45"
 authors: [
 	"Zaccone Rosario",
-	,
 ]
-missingMembers: [
+externalParticipants: [
 	"Bassani Matteo (Referente aziendale)",
 ]
 version: 1.0.0
