--- a/src/content/docs/rtb/Documentazione esterna/Verbali esterni/23-12-06.mdx
+++ b/src/content/docs/rtb/Documentazione esterna/Verbali esterni/23-12-06.mdx
@@ -7,13 +7,11 @@ timeStart: "16:00"
 timeEnd: "16:40"
 authors: [
 	"Todesco Mattia",
-	,
 ]
 reviewers: [
 	"Nardo Silvio",
-	,
 ]
-missingMembers: [
+externalParticipants: [
 	"Bassani Matteo (Referente aziendale)",
 ]
 version: 1.0.0
