--- a/src/content/docs/rtb/Documentazione esterna/Verbali esterni/23-12-15.mdx
+++ b/src/content/docs/rtb/Documentazione esterna/Verbali esterni/23-12-15.mdx
@@ -7,9 +7,8 @@ timeStart: "12:00"
 timeEnd: "12:30"
 authors: [
 	"Nardo Silvio",
-	,
 ]
-missingMembers: [
+externalParticipants: [
 	"Alberton Michela (Membro azienda proponente)",
 	"Bassani Matteo (Referente aziendale)",
 	"Ruffin Filippo (Membro azienda proponente)",
