--- a/src/content/docs/rtb/Documentazione esterna/Verbali esterni/23-11-15.mdx
+++ b/src/content/docs/rtb/Documentazione esterna/Verbali esterni/23-11-15.mdx
@@ -7,9 +7,8 @@ timeStart: "10:00"
 timeEnd: "11:00"
 authors: [
 	"Carraro Riccardo",
-	,
 ]
-missingMembers: [
+externalParticipants: [
 	"Bassani Matteo (Referente aziendale)",
 ]
 version: 1.0.0
@@ -26,8 +25,6 @@ import ChangelogTable from '/src/components/ChangelogTable.astro';
 | Versione | Data       | PR  | Titolo                                       | Redattore        | Verificatore     |
 | -------- | ---------- | --- | -------------------------------------------- | ---------------- | ---------------- |
 | 1.0.0    | 06-01-2024 | 153 | DOC-322 Revisionare verbale esterno 23-11-15 | Zaccone Rosario  | Carraro Riccardo |
-|          |            | 6   | DOC-68 Verbale esterno 15/11/23              | Gardin Giovanni  |                  |
-|          |            | 6   | DOC-68 Verbale esterno 15/11/23              | Carraro Riccardo |                  |
-|          |            | 6   | Doc 68 scrivere verbale 15 11 23             | Carraro Riccardo |                  |
+|          |            | 6   | DOC-68 Redigere verbale 23-11-15             | Carraro Riccardo | Gardin Giovanni  |
 </ChangelogTable>
 
