--- a/src/content/docs/rtb/Lettera di presentazione RTB.mdx
+++ b/src/content/docs/rtb/Lettera di presentazione RTB.mdx
@@ -1,4 +1,5 @@
 ---
+title: Letera di presentazione RTB
 version: 1.0.1
 url: "https://error-418-swe.github.io/Documenti/2 - RTB/Lettera di presentazione_v1.0.1.pdf"
 lastUpdated: 2024-02-16
