--- a/src/content/docs/rtb/Lettera di presentazione RTB.mdx
+++ b/src/content/docs/rtb/Lettera di presentazione RTB.mdx
@@ -1,7 +1,7 @@
 ---
 title: Lettera di presentazione RTB
 version: 1.0.2
-url: "https://error-418-swe.github.io/Documenti/2 - RTB/Lettera di presentazione_v1.0.2.pdf"
+url: "https://error-418-swe.github.io/Documenti/2 - RTB/Lettera di presentazione RTB_v1.0.2.pdf"
 lastUpdated: 2024-02-16
 ---
 
