--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -26,6 +26,7 @@ import ListCard from '../../components/ListCard.astro'
   <ListCard title="Sezioni">
     - [Introduzione](/introduzione/sezioni/)
     - [Documenti RTB](/rtb/introduzione/)
+    - [Documenti PB](/pb/introduzione/)
   </ListCard>
   <ListCard title="Sezioni">
     - <a title="GitHub" href="https://github.com/Error-418-SWE/Documenti/tree/main" target="_blank">Repository GitHub</a>
