Aggiunto link al capitolato

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -28,7 +28,7 @@ import ListCard from '../../components/ListCard.astro'
     - [Documenti RTB](/rtb/introduzione/)
     - [Documenti PB](/pb/introduzione/)
   </ListCard>
-  <ListCard title="Sezioni">
+    - <a title="Capitolato" href="https://www.math.unipd.it/~tullio/IS-1/2023/Progetto/C5.pdf" target="_blank">Capitolato C5</a>
     - <a title="GitHub" href="https://github.com/Error-418-SWE/Documenti/tree/main" target="_blank">Repository GitHub</a>
     - <a title="Grafana" href="https://error418swe.grafana.net/public-dashboards/9392efccc5a5427c850fc9ec81df7dff" target="_blank">Dashboard Grafana</a>
   </ListCard>
