Aggiunto link a PB

--- a/src/content/docs/introduzione/sezioni.mdx
+++ b/src/content/docs/introduzione/sezioni.mdx
@@ -15,6 +15,11 @@ La documentazione è suddivisa per milestone. A ciascuna milestone è associata 
 		subTitle="Requirements and Technology Baseline"
 		href="/rtb/introduzione/"
 		/>
+	<LinkCard
+		title="Documenti PB"
+		subTitle="Product Baseline"
+		href="/pb/introduzione/"
+		/>
 </CardGrid>
 
 ### Risorse esterne
