Nascosti documenti RTB dalla ricerca

--- a/src/content/docs/rtb/Documentazione esterna/Piano di Qualifica.mdx
+++ b/src/content/docs/rtb/Documentazione esterna/Piano di Qualifica.mdx
@@ -11,6 +11,7 @@ authors: [
 version: 1.2.0
 url: "https://error-418-swe.github.io/Documenti/2 - RTB/Documentazione esterna/Piano di Qualifica_v1.2.0.pdf"
 lastUpdated: 2024-02-16
+pagefind: false
 ---
 
 import DocumentDetails from '/src/components/DocumentDetails.astro';
