--- a/src/content/docs/rtb/Documentazione interna/Analisi dei Rischi.mdx
+++ b/src/content/docs/rtb/Documentazione interna/Analisi dei Rischi.mdx
@@ -11,6 +11,7 @@ authors: [
 version: 2.0.2
 url: "https://error-418-swe.github.io/Documenti/2 - RTB/Documentazione interna/Analisi dei Rischi_v2.0.2.pdf"
 lastUpdated: 2024-02-16
+pagefind: false
 ---
 
 import DocumentDetails from '/src/components/DocumentDetails.astro';
