--- a/src/content/docs/rtb/Documentazione esterna/Analisi dei Requisiti.mdx
+++ b/src/content/docs/rtb/Documentazione esterna/Analisi dei Requisiti.mdx
@@ -13,6 +13,7 @@ authors: [
 version: 1.12.1
 url: "https://error-418-swe.github.io/Documenti/2 - RTB/Documentazione esterna/Analisi dei Requisiti_v1.12.1.pdf"
 lastUpdated: 2024-02-20
+pagefind: false
 ---
 
 import DocumentDetails from '/src/components/DocumentDetails.astro';
