--- a/src/content/docs/rtb/Documentazione esterna/Piano di Progetto.mdx
+++ b/src/content/docs/rtb/Documentazione esterna/Piano di Progetto.mdx
@@ -14,6 +14,7 @@ authors: [
 version: 1.8.0
 url: "https://error-418-swe.github.io/Documenti/2 - RTB/Documentazione esterna/Piano di Progetto_v1.8.0.pdf"
 lastUpdated: 2024-02-16
+pagefind: false
 ---
 
 import DocumentDetails from '/src/components/DocumentDetails.astro';
