--- a/src/content/docs/rtb/Documentazione interna/Norme di Progetto.mdx
+++ b/src/content/docs/rtb/Documentazione interna/Norme di Progetto.mdx
@@ -10,6 +10,7 @@ authors: [
 version: 1.17.4
 url: "https://error-418-swe.github.io/Documenti/2 - RTB/Documentazione interna/Norme di Progetto_v1.17.4.pdf"
 lastUpdated: 2024-02-16
+pagefind: false
 ---
 
 import DocumentDetails from '/src/components/DocumentDetails.astro';
