--- a/src/content/docs/rtb/Glossario.mdx
+++ b/src/content/docs/rtb/Glossario.mdx
@@ -11,6 +11,7 @@ reviewers: [
 version: 1.3.0
 url: "https://error-418-swe.github.io/Documenti/2 - RTB/Glossario_v1.3.0.pdf"
 lastUpdated: 2024-02-14
+pagefind: false
 ---
 
 import DocumentDetails from '/src/components/DocumentDetails.astro';
