Corretto link al verbale

--- a/src/content/docs/pb/Documentazione esterna/Verbali esterni/24-03-07.mdx
+++ b/src/content/docs/pb/Documentazione esterna/Verbali esterni/24-03-07.mdx
@@ -9,8 +9,8 @@ authors: [
 	"Banzato Alessio",
 	,
 ]
-version: 
-url: "https://error-418-swe.github.io/Documenti/3 - PB/Documentazione esterna/Verbali/24-03-07_v.pdf"
+version:
+url: "https://error-418-swe.github.io/Documenti/3 - PB/Documentazione esterna/Verbali/24-03-07_v1.0.0.pdf"
 lastUpdated: 2024-03-08
 ---
 
