Aggiunte informazioni su versione e changelog

--- a/src/content/docs/pb/Documentazione esterna/Verbali esterni/24-03-07.mdx
+++ b/src/content/docs/pb/Documentazione esterna/Verbali esterni/24-03-07.mdx
@@ -9,7 +9,7 @@ authors: [
 	"Banzato Alessio",
 	,
 ]
-version:
+version: 1.0.0
 url: "https://error-418-swe.github.io/Documenti/3 - PB/Documentazione esterna/Verbali/24-03-07_v1.0.0.pdf"
 lastUpdated: 2024-03-08
 ---
@@ -20,6 +20,8 @@ import ChangelogTable from '/src/components/ChangelogTable.astro';
 <DocumentDetails {...frontmatter}/>
 
 <ChangelogTable {...frontmatter}>
-
+| Versione | Data       | PR  | Titolo                                              | Redattore       | Verificatore     |
+| -------- | ---------- | --- | --------------------------------------------------- | --------------- | ---------------- |
+| 1.0.0    | 08-03-2024 | 353 | DOC-557 Redigere verbale meeting esterno 07/03/2024 | Banzato Alessio | Oseliero Antonio |
 </ChangelogTable>
 
