Aggiunte informazioni sui verificatori

--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-22.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-22.mdx
@@ -8,6 +8,10 @@ authors: [
 	"Todesco Mattia",
 	,
 ]
+reviewers: [
+	"Banzato Alessio",
+	,
+]
 version: 1.0.1
 url: "https://error-418-swe.github.io/Documenti/3 - PB/Documentazione interna/Verbali/24-02-22_v1.0.1.pdf"
 lastUpdated: 2024-04-18
