--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-26.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-26.mdx
@@ -8,6 +8,10 @@ authors: [
 	"Banzato Alessio",
 	,
 ]
+reviewers: [
+	"Oseliero Antonio",
+	,
+]
 version: 1.0.0
 url: "https://error-418-swe.github.io/Documenti/3 - PB/Documentazione interna/Verbali/24-02-26_v1.0.0.pdf"
 lastUpdated: 2024-04-23
