--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-17.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-17.mdx
@@ -8,6 +8,10 @@ authors: [
 	"Nardo Silvio",
 	,
 ]
+reviewers: [
+	"Banzato Alessio",
+	,
+]
 version: 1.0.0
 url: "https://error-418-swe.github.io/Documenti/3 - PB/Documentazione interna/Verbali/24-03-17_v1.0.0.pdf"
 lastUpdated: 2024-04-23
