Aggiunte informazioni sul luogo

--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-25.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-25.mdx
@@ -2,6 +2,7 @@
 title: Verbale 25/02/24
 date: 2024-02-25
 subTitle: "Meeting di retrospettiva e pianificazione"
+location: "Discord"
 timeStart: "15:10"
 timeEnd: "16:10"
 authors: [
