--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-26.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-26.mdx
@@ -2,6 +2,7 @@
 title: Verbale 26/02/24
 date: 2024-02-26
 subTitle: "Meeting di Design Thinking"
+location: "Discord"
 timeStart: "15:10"
 timeEnd: "16:50"
 authors: [
