--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-29.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-29.mdx
@@ -2,6 +2,7 @@
 title: Verbale 29/02/24
 date: 2024-02-29
 subTitle: "Meeting post colloquio con Proponente"
+location: "Discord"
 timeStart: "17:10"
 timeEnd: "17:25"
 authors: [
