--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-06.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-06.mdx
@@ -2,6 +2,7 @@
 title: Verbale 06/03/24
 date: 2024-03-06
 subTitle: "Meeting post colloquio con Committente"
+location: "Discord"
 timeStart: "09:00"
 timeEnd: "10:00"
 authors: [
