--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-07.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-07.mdx
@@ -2,6 +2,7 @@
 title: Verbale 07/03/24
 date: 2024-03-07
 subTitle: "Meeting post colloquio con Proponente"
+location: "Discord"
 timeStart: "16:40"
 timeEnd: "17:00"
 authors: [
