--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-30.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-30.mdx
@@ -2,6 +2,7 @@
 title: Verbale 30/03/24
 date: 2024-03-30
 subTitle: "Meeting di retrospettiva e pianificazione"
+location: "Discord"
 timeStart: "10:30"
 timeEnd: "11:15"
 authors: [
