--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-04-07.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-04-07.mdx
@@ -2,6 +2,7 @@
 title: Verbale 07/04/24
 date: 2024-04-07
 subTitle: "Meeting di retrospettiva e pianificazione"
+location: "Discord"
 timeStart: "15:10"
 timeEnd: "16:00"
 authors: [
