--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-18.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-18.mdx
@@ -2,6 +2,7 @@
 title: Verbale 18/02/24
 date: 2024-02-18
 subTitle: "Meeting di retrospettiva e pianificazione"
+location: "Discord"
 timeStart: "15:00"
 timeEnd: "15:45"
 authors: [
