--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-22.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-02-22.mdx
@@ -2,6 +2,7 @@
 title: Verbale 22/02/24
 date: 2024-02-22
 subTitle: "Meeting post colloquio con Proponente"
+location: "Discord"
 timeStart: "16:10"
 timeEnd: "16:25"
 authors: [
