--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-17.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-17.mdx
@@ -2,6 +2,7 @@
 title: Verbale 17/03/24
 date: 2024-03-17
 subTitle: "Meeting di retrospettiva e pianificazione"
+location: "Discord"
 timeStart: "15:00"
 timeEnd: "16:00"
 authors: [
