--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-24.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-03-24.mdx
@@ -2,6 +2,7 @@
 title: Verbale 24/03/24
 date: 2024-03-24
 subTitle: "Meeting di retrospettiva e pianificazione"
+location: "Discord"
 timeStart: "15:10"
 timeEnd: "16:05"
 authors: [
