--- a/src/content/docs/pb/Documentazione interna/Verbali interni/24-04-21.mdx
+++ b/src/content/docs/pb/Documentazione interna/Verbali interni/24-04-21.mdx
@@ -2,6 +2,7 @@
 title: Verbale 21/04/24
 date: 2024-04-21
 subTitle: "Meeting di retrospettiva e pianificazione"
+location: "Discord"
 timeStart: "15:00"
 timeEnd: "16:00"
 authors: [
