Corretta pagina della lettera di presentazione

--- a/src/content/docs/pb/Lettera di presentazione.mdx
+++ b/src/content/docs/pb/Lettera di presentazione.mdx
@@ -1,6 +1,7 @@
 ---
-version: 
-url: "https://error-418-swe.github.io/Documenti/3 - PB/Lettera di presentazione_v.pdf"
+title: "Lettera di presentazione PB"
+version: 1.0.1
+url: "https://error-418-swe.github.io/Documenti/3 - PB/Lettera di presentazione_v1.0.1.pdf"
 lastUpdated: 2024-04-23
 ---
 
