--- a/src/content/docs/pb/Documentazione esterna/Manuale Utente.mdx
+++ b/src/content/docs/pb/Documentazione esterna/Manuale Utente.mdx
@@ -7,8 +7,8 @@ authors: [
 	"Todesco Mattia",
 	,
 ]
-version: 1.13.0
-url: "https://error-418-swe.github.io/Documenti/3 - PB/Documentazione esterna/Manuale Utente_v1.13.0.pdf"
+version: 2.0.0
+url: "https://error-418-swe.github.io/Documenti/3 - PB/Documentazione esterna/Manuale Utente_v2.0.0.pdf"
 lastUpdated: 2024-04-18
 ---
 
@@ -20,6 +20,7 @@ import ChangelogTable from '/src/components/ChangelogTable.astro';
 <ChangelogTable {...frontmatter}>
 | Versione | Data       | PR  | Titolo                                                        | Redattore        | Verificatore    |
 | -------- | ---------- | --- | ------------------------------------------------------------- | ---------------- | --------------- |
+| 2.0.0    | 23-04-2024 | 466 | DOC-736 Aggiornare struttura del documento                    | Carraro Riccardo | Gardin Giovanni |
 | 1.13.0   | 18-04-2024 | 447 | DOC-707 Aggiungere glossario                                  | Nardo Silvio     | Gardin Giovanni |
 | 1.12.1   | 15-04-2024 | 441 | DOC-675 Aggiornare immagini                                   | Oseliero Antonio | Banzato Alessio |
 | 1.12.0   | 11-04-2024 | 436 | DOC-706 Rimozione sezione Supporto tecnico                    | Nardo Silvio     | Banzato Alessio |
